--- a/src/core/static/template/index.html
+++ b/src/core/static/template/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -12,10 +13,13 @@
     </header>
 
     <section>
-        <div>
-            teste div1
-
-        </div>
+        <form method="post" novalidate>
+        {% csrf_token %}
+            <table border="1">
+                {{ form }}
+            </table>
+        <button type="submit">Submit</button>
+        </form>
 
         <div>
 
