tenta configurar forms para criar novo conflito

--- a/src/core/static/template/home.html
+++ b/src/core/static/template/home.html
@@ -6,25 +6,52 @@
 		<title>Home</title>
 	</head>
 	<body>
-		<h1>Trabalho de Banco de Dados</h1>
+        <h1>Trabalho de Banco de Dados</h1>
+        <h2>Controle do banco de dados</h2>
+        <ul>
+            <li>
+                <a href="/drop-schema">Descarta esquema e cria novamente</a>
+            </li>
+            <li>
+                <a href="/create-db">Cria tabelas e triggers</a>
+            </li>
+            <li>
+                <a href="/populate">Popula tabelas</a>
+            </li>
+        </ul>
+        <h2>Exercicio 1</h2>
+        <h2>Exercicio 2</h2>
+        <h3>A</h3>
+        <ul>
+            <li>
+                <a href="/create/conflict">Criar um novo conflito</a>
+            </li>
+        </ul>
+        <h3>B</h3>
 		<ul>
 			<li>
-				<a href="/i">Exercício 2.b.i</a>
+                <a href="/i">Gráfico, histograma, por tipo de conflito e número de conflitos</a>
+                
 			</li>
 			<li>
-				<a href="/ii">Exercício 2.b.ii</a>
+                <a href="/ii">Traficantes e os grupos armados para os quais os traficantes fornecem armas “Barret M82” ou “M200 intervention”</a>
+                
 			</li>
 			<li>
-				<a href="/iii">Exercício 2.b.iii</a>
+                <a href="/iii">5 maiores conflitos em número de mortos</a>
+                
 			</li>
 			<li>
-				<a href="/iv">Exercício 2.b.iv</a>
+                <a href="/iv">5 maiores organizações em número de mediações</a>
+                
 			</li>
 			<li>
-				<a href="/v">Exercício 2.b.v</a>
+                <a href="/v">5 maiores grupos armados com maior número de armas fornecidos</a>
+                
 			</li>
 			<li>
-				<a href="/vi">Exercício 2.b.vi</a>
+                <a href="/vi">País com maior número de conflitos territoriais</a>
+                
 			</li>
 		</ul>
 	</body>
