configura home para os forms

--- a/src/core/static/template/home.html
+++ b/src/core/static/template/home.html
@@ -24,8 +24,28 @@
         <h3>A</h3>
         <ul>
             <li>
-                <a href="/create/conflict">Criar um novo conflito</a>
+                <a href="/2/conflict_form/">Criar um novo conflito</a>
             </li>
+            <li>
+                <a href="/2/military_chief_form/">Criar um novo chefe militar</a>
+            </li>
+            <li>
+                <a href="/2/political_leader_form/">Criar um novo lider politico</a>
+            </li>
+            <li>
+                <a href="/2/armed_group_form/">Criar um novo grupo armado</a>
+            </li>
+            <li>
+                <a href="/2/division_form/">Criar uma nova divisão</a>
+            </li>
+            <li>
+                <a href="/2/weapon_form/">Criar uma nova arma</a>
+            </li>
+
+            <li>
+                <a href="/2/dealer_form/">Criar um novo traficante</a>
+            </li>
+
         </ul>
         <h3>B</h3>
 		<ul>
