update home e style

--- a/src/core/static/template/home.html
+++ b/src/core/static/template/home.html
@@ -2,106 +2,106 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Conflitos Bélicos</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Conflitos Bélicos</title>
 
-        <link rel="stylesheet" href="/src/core/static/template/style.css" type="text/css">
+		<link
+			rel="stylesheet"
+			href="/src/core/static/template/style.css"
+			type="text/css"
+		/>
 	</head>
 	<body>
+		<header>
+			<h1>Conflitos Bélicos</h1>
 
-        <header>
-            <h1>Conflitos Bélicos</h1>
-            <h2>Controle do banco de dados</h2>
-            
-            <section class="discipline">
-                <div class="integrants">
-                    <h4>Integrantes: <br>
-                        Arthur Font Gouveia - 12036152 <br>
-                        Gabriel Folegatti Santana - 9911506 <br>
-                        Gabriel Hoffman Silva - 10783250 <br>
-                        Victor Dominoni - 8063371 <br>
-                    </h4>
-                    <h5>Disciplina ministrada por Prof. Dr. José de Jesús Pérez Alcázar</h5>
-                </div>
-            </section>
-        </header>
+			<section class="discipline">
+				<div class="integrants">
+					<h4>
+						Integrantes: <br />
+						Arthur Font Gouveia - 12036152 <br />
+						Gabriel Folegatti Santana - 9911506 <br />
+						Gabriel Hoffman Silva - 10783250 <br />
+						Victor Dominoni - 8063371 <br />
+					</h4>
+					<h5>
+						Disciplina ministrada por Prof. Dr. José de Jesús Pérez Alcázar
+					</h5>
+				</div>
+			</section>
+		</header>
 
-        <section>
+		<section>
+			<h3>Controle do banco de dados</h3>
+			<ul class="nobull" id="table-creation">
+				<li>
+					<a href="/create-db">Cria tabelas e triggers</a>
+				</li>
+				<li>
+					<a href="/populate">Popula tabelas</a>
+				</li>
+				<li>
+					<a href="/drop-schema">Descarta esquema e cria novamente</a>
+				</li>
+			</ul>
 
-            <h3>Inicialização</h3>
-            <ul class="nobull" id="table-creation">
-                <li>
-                    <a href="/create-db">Cria tabelas e triggers</a>
-                </li>
-                <li>
-                    <a href="/populate">Popula tabelas</a>
-                </li>
-                <li>
-                    <a href="/drop-schema">Descarta esquema e cria novamente</a>
-                </li>
-            </ul>
+			<h3>Exercício 2</h3>
 
-            <h3>Exercício 1</h3>
-            <h3>Exercício 2</h3>
+			<h5>A</h5>
+			<ul class="bullet">
+				<li>
+					<a href="/2/conflict_form/">Criar um novo conflito</a>
+				</li>
+				<li>
+					<a href="/2/military_chief_form/">Criar um novo chefe militar</a>
+				</li>
+				<li>
+					<a href="/2/political_leader_form/">Criar um novo lider politico</a>
+				</li>
+				<li>
+					<a href="/2/armed_group_form/">Criar um novo grupo armado</a>
+				</li>
+				<li>
+					<a href="/2/division_form/">Criar uma nova divisão</a>
+				</li>
+				<li>
+					<a href="/2/weapon_form/">Criar uma nova arma</a>
+				</li>
 
-            <h5>A)</h5>
-            <ul class="bullet">
-                <li>
-                    <a href="/2/conflict_form/">Criar um novo conflito</a>
-                </li>
-                <li>
-                    <a href="/2/military_chief_form/">Criar um novo chefe militar</a>
-                </li>
-                <li>
-                    <a href="/2/political_leader_form/">Criar um novo lider politico</a>
-                </li>
-                <li>
-                    <a href="/2/armed_group_form/">Criar um novo grupo armado</a>
-                </li>
-                <li>
-                    <a href="/2/division_form/">Criar uma nova divisão</a>
-                </li>
-                <li>
-                    <a href="/2/weapon_form/">Criar uma nova arma</a>
-                </li>
+				<li>
+					<a href="/2/dealer_form/">Criar um novo traficante</a>
+				</li>
+			</ul>
 
-                <li>
-                    <a href="/2/dealer_form/">Criar um novo traficante</a>
-                </li>
-            </ul>
+			<h5>B</h5>
 
-            <h5>B)</h5>
-
-            <ul class="bullet">
-                <li>
-                    <a href="/i">Gráfico, histograma, por tipo de conflito e número de conflitos</a>
-                    
-                </li>
-                <li>
-                    <a href="/ii">Traficantes e os grupos armados para os quais os traficantes fornecem armas “Barret M82” ou “M200 intervention”</a>
-                    
-                </li>
-                <li>
-                    <a href="/iii">5 maiores conflitos em número de mortos</a>
-                    
-                </li>
-                <li>
-                    <a href="/iv">5 maiores organizações em número de mediações</a>
-                    
-                </li>
-                <li>
-                    <a href="/v">5 maiores grupos armados com maior número de armas fornecidos</a>
-                    
-                </li>
-                <li>
-                    <a href="/vi">País com maior número de conflitos territoriais</a>
-                    
-                </li>
-            </ul>
-
-
-        </section>
-
-        
+			<ul class="bullet">
+				<li>
+					<a href="/i"
+						>Gráfico, histograma, por tipo de conflito e número de conflitos</a
+					>
+				</li>
+				<li>
+					<a href="/ii"
+						>Traficantes e os grupos armados para os quais os traficantes
+						fornecem armas “Barret M82” ou “M200 intervention”</a
+					>
+				</li>
+				<li>
+					<a href="/iii">5 maiores conflitos em número de mortos</a>
+				</li>
+				<li>
+					<a href="/iv">5 maiores organizações em número de mediações</a>
+				</li>
+				<li>
+					<a href="/v"
+						>5 maiores grupos armados com maior número de armas fornecidos</a
+					>
+				</li>
+				<li>
+					<a href="/vi">País com maior número de conflitos territoriais</a>
+				</li>
+			</ul>
+		</section>
 	</body>
 </html>
