--- a/src/core/static/template/style.css
+++ b/src/core/static/template/style.css
@@ -26,11 +26,11 @@ footer{
     color: rgba(12, 7, 7, 0.315);
 }
 
-div.integrants{
+integrants{
     text-align: center;
 }
 
-h3{
+h3,h2,h1,section{
     text-align: center;
 }
 
@@ -60,6 +60,7 @@ a:link {
 
   li{
       margin-top: 8px;
+      list-style-type: none;
   }
 
   ul{
